--- a/miscellaneous/03. Interview.md
+++ b/miscellaneous/03. Interview.md
@@ -327,5 +327,31 @@ By carefully considering these techniques and tailoring them to your specific us
 
 **In essence, Azure DevOps serves as a comprehensive platform for software development teams to plan, develop, test, and deploy applications efficiently.**
 
+8. What is Data Governance ?
+
+https://learn.microsoft.com/en-us/azure/cloud-adoption-framework/scenarios/cloud-scale-analytics/govern-requirements
+https://learn.microsoft.com/en-us/training/modules/describe-purview-data-governance/2-describe-benefits-data-governance
+
+![image](https://github.com/user-attachments/assets/3335ddb7-92d8-4ac5-8e23-eaa4565e97ae)
+
+9. Describe Microsoft Purview Data Catalog ?
+
+- The goal of Microsoft Purview Data Catalog is to provide a platform for data governance and to drive business value creation in your organization. It does this through a rich set of features that align to data governance principles. The sections that follow describe some of the key features of the Microsoft Purview Data Catalog
+- Critical data elements(CDEs): For example: A "Customer ID" critical data element can map "CustID" from one table and "CID" from another table into the same logical container. Users can match this value across data assets to make connections, and when data producers create a new asset they can use this element as a blueprint to provide quality information in the correct format.
+- OKRs (objectives and key results) in Microsoft Purview are trackable business objectives tied to governance domains and data products to emphasize the value of business data. OKRs link data products directly to real business objectives to cross the gap between the business and the data estate. Data governance isn't just an IT task or engineering best practice, it's a critical part of value generation.
+- Data access policies: Data catalog access policies allow you to manage access to your data products and set up a system to provide access to users who request it. Promote innovation and flexibility in your data estate by creating self-service access opportunities, while upholding security and right-use standards.
+- Search and browse: Data discovery can be time consuming because you might not know where to find the data that you want. Search enables data consumers need to easily find the data needed for their analytics or governance workloads. Searching is great if you know what you're looking for, but there are times where data consumers wish to explore the data available to them. The Microsoft Purview Data Catalog offers a browse experience that enables users to explore what data is available to them either by collection or through traversing the hierarchy of each data source in the catalog.
+- Health controls: Data health controls allow your team to analyze and track your journey to complete data governance by monitoring your governance health, and using the provided health controls to track your progress. Data Health Controls are specific measures, processes, and tools implemented to monitor, maintain, and improve the quality, security, and overall health of an organization's data. The benefits of data health controls include:
+    - Improved Data Quality: Ensures that data remains accurate, consistent, and reliable for decision-making.
+    - Enhanced Security: Protects sensitive data from breaches, unauthorized access, and corruption.
+    - Regulatory Compliance: Helps organizations adhere to legal and industry standards for data management.
+    - Operational Efficiency: Reduces the time and resources spent on correcting data issues and ensures that data is readily available and usable.
+    - Risk Mitigation: Prevents costly errors and data-related risks that can arise from poor data management.
+- In summary, data health controls are essential components of a comprehensive data governance strategy, helping organizations maintain the integrity, security, and usability of their data assets.
+- Data quality: Microsoft Purview Data Quality is a comprehensive solution that empowers governance domain and data owners to assess and oversee the quality of their data ecosystem, facilitating targeted actions for improvement. Data Quality offers users the ability to evaluate data quality using no-code/low-code rules, including out-of-the-box (OOB) rules and AI-generated rules. These rules are aggregated to provide scores at the levels of data assets, data products, and governance domains, ensuring end-to-end visibility of data quality within each domain. Microsoft Purview Data Quality also incorporates AI-powered data profiling capabilities. By applying Microsoft Purview Data Quality, organizations can effectively measure, monitor, and enhance the quality of their data assets.
+
+10. 
+
+
 
 
