--- a/03-Azure-Data-Factory(ADF)/cosmos-db/cdb02. cosmosdb.ipynb
+++ b/03-Azure-Data-Factory(ADF)/cosmos-db/cdb02. cosmosdb.ipynb
@@ -3,10 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bb4e4919",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. open anaconda navigator > launch Jupyter lab > run below commands"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bab29c86-9c14-4246-b2b6-c836e42d6442",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# un comment below command and run it\n",
     "#!pip install azure-cosmos"
    ]
   },
@@ -17,7 +28,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# un comment below command and run it\n",
     "#!pip install aiohttp\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0358c83a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# open portal.azure.com > Free services > search for Azure Cosmos DB > Click on Create \n",
+    "# > Azure Cosmos DB for NoSQL > Clcik on Create > Select resource group and put name  rgrrcdb \n",
+    "# > Enable Limit total account throughput\n",
+    "# > click on Review and Create\n",
+    "# click on create\n",
+    "# Goto overview tab and get URL \n",
+    "# Search keys > get primery key "
    ]
   },
   {
@@ -27,6 +55,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# relace below url and primerkey\n",
+    "\n",
     "import os\n",
     "from azure.cosmos import CosmosClient, exceptions, PartitionKey\n",
     "#from azure.cosmos.aio import CosmosClient \n",
@@ -150,8 +180,8 @@
     "import json\n",
     "import asyncio\n",
     "\n",
-    "URL = \"https://rgrrcdb.documents.azure.com:443/\"\n",
-    "KEY = \"u2sKgzsN40crDOZxwp1Nhaa1bCENhKdvetO45gp4ll0ZSSbu65grSaQQDQJhfJIhfotc0dEkdECOACDbAFxPUA==\"\n",
+    "#URL = \"https://rgrrcdb.documents.azure.com:443/\"\n",
+    "#KEY = \"u2sKgzsN40crDOZxwp1Nhaa1bCENhKdvetO45gp4ll0ZSSbu65grSaQQDQJhfJIhfotc0dEkdECOACDbAFxPUA==\"\n",
     "client = CosmosClient(URL, credential=KEY)\n"
    ]
   },
@@ -205,8 +235,8 @@
     "import json\n",
     "import asyncio\n",
     "\n",
-    "URL = \"https://rgrrcdb.documents.azure.com:443/\"\n",
-    "KEY = \"u2sKgzsN40crDOZxwp1Nhaa1bCENhKdvetO45gp4ll0ZSSbu65grSaQQDQJhfJIhfotc0dEkdECOACDbAFxPUA==\"\n",
+    "#URL = \"https://rgrrcdb.documents.azure.com:443/\"\n",
+    "#KEY = \"u2sKgzsN40crDOZxwp1Nhaa1bCENhKdvetO45gp4ll0ZSSbu65grSaQQDQJhfJIhfotc0dEkdECOACDbAFxPUA==\"\n",
     "client = CosmosClient(URL, credential=KEY)\n",
     "\n"
    ]
