--- a/03-Azure-Data-Factory(ADF)/more/01.paginated_api.md
+++ b/03-Azure-Data-Factory(ADF)/more/01.paginated_api.md
@@ -33,3 +33,18 @@
 
 
 11. Click on debug and observe results.
+![image](https://github.com/user-attachments/assets/93d37541-9df3-46fc-ac55-24751ece7843)
+
+## Create pipeline to extract data from API to BLOB using Query parameters
+
+1. In above ieline change source base url as
+![image](https://github.com/user-attachments/assets/c5320471-86b6-4dbb-9138-69a9e9dc9793)
+
+2. Change aginated rules as
+
+![image](https://github.com/user-attachments/assets/0164612b-f3b7-4442-b1c9-5df45d869aa3)
+
+3. run it and observe the result
+
+
+
