--- a/03-Azure-Data-Factory(ADF)/more/01.paginated_api.md
+++ b/03-Azure-Data-Factory(ADF)/more/01.paginated_api.md
@@ -26,27 +26,27 @@
 
 
 
-9. Click on **Sink** >> Click on New >> Select Azure Blob Storage >> Click on continue >> Select Delimitedtext >> Click on continue >> Select existing linked service or create new linked service >> select container,folder filename as you wish.>> click on ok
+9. Click on **Sink** >> Click on **New** >> Select **Azure Blob Storage** >> Click on **continue** >> Select **Delimitedtext** >> Click on **continue** >> Select existing linked service or create new linked service >> select container,folder filename as you wish.>> click on ok
 ![image](https://github.com/user-attachments/assets/a5711fb9-6146-443d-9b3a-43e1e6c1f12f)
 
 
-10. Click on Mapping Tab >> select as shown below
+10. Click on **Mapping** Tab >> select as shown below
 ![image](https://github.com/user-attachments/assets/457473b6-6964-4d0c-bfd8-2fba3d5db14e)
 
 
-11. Click on debug and observe results.
+11. Click on **debug** and observe results.
 ![image](https://github.com/user-attachments/assets/93d37541-9df3-46fc-ac55-24751ece7843)
 
 ## Create pipeline to extract data from API to BLOB using Query parameters
 
-1. In above ieline change source base url as
+1. In above pieline change source base url as
 ![image](https://github.com/user-attachments/assets/c5320471-86b6-4dbb-9138-69a9e9dc9793)
 
-2. Change aginated rules as
+2. Change paginated rules as
 
 ![image](https://github.com/user-attachments/assets/0164612b-f3b7-4442-b1c9-5df45d869aa3)
 
-3. run it and observe the result
+3. Run it and observe the result
 
 
 
