--- a/miscellaneous/03. Interview.md
+++ b/miscellaneous/03. Interview.md
@@ -351,96 +351,99 @@ https://learn.microsoft.com/en-us/training/modules/describe-purview-data-governa
 - Data quality: Microsoft Purview Data Quality is a comprehensive solution that empowers governance domain and data owners to assess and oversee the quality of their data ecosystem, facilitating targeted actions for improvement. Data Quality offers users the ability to evaluate data quality using no-code/low-code rules, including out-of-the-box (OOB) rules and AI-generated rules. These rules are aggregated to provide scores at the levels of data assets, data products, and governance domains, ensuring end-to-end visibility of data quality within each domain. Microsoft Purview Data Quality also incorporates AI-powered data profiling capabilities. By applying Microsoft Purview Data Quality, organizations can effectively measure, monitor, and enhance the quality of their data assets.
 
 10. how to do performance tunning of pyspark code ?
-    1. Optimize Data Serialization
+    1. Optimize Data Serialization:
+
     ✅ Use Apache Arrow for fast data serialization between PySpark and Pandas:
     
     ```
     from pyspark.sql import SparkSession
     spark = SparkSession.builder.config("spark.sql.execution.arrow.enabled", "true").getOrCreate()
     ```
+
     ✅ Prefer Kryo Serialization (faster than Java serialization):
     
-    python
-    Copy
-    Edit
+    ```
     spark.conf.set("spark.serializer", "org.apache.spark.serializer.KryoSerializer")
-    2. Optimize DataFrame Operations
+    ```
+    2. Optimize DataFrame Operations:
+
     ✅ Avoid using RDDs, prefer DataFrame API:
     
-    python
-    Copy
-    Edit
+    ```
     df = spark.read.parquet("s3://your-bucket/data")
+    ```
+    
     ✅ Minimize shuffling by using coalesce() instead of repartition() when reducing partitions:
     
-    python
-    Copy
-    Edit
+    ```
     df = df.coalesce(10)  # Reduce partitions efficiently
+    ```
+    
     ✅ Use filter() and select() early to reduce data size:
     
-    python
-    Copy
-    Edit
+    ```
     df = df.select("column1", "column2").filter(df.column1 > 100)
+    ```
     3. Partitioning & Caching
+
     ✅ Use partitioning to speed up queries on large datasets:
     
-    python
-    Copy
-    Edit
+    ```
     df.write.partitionBy("year", "month").parquet("s3://your-bucket/partitioned-data")
+    ```
+    
     ✅ Cache frequent datasets for reuse:
     
-    python
-    Copy
-    Edit
+    ```
     df.cache()
     df.count()  # Forces cache
+    ```
+    
     ✅ Avoid unnecessary caching—only cache when data is reused.
     
-    4. Shuffle & Join Optimizations
+    4. Shuffle & Join Optimizations:
+       
     ✅ Use Broadcast Joins for small datasets (reduces expensive shuffling):
     
-    python
-    Copy
-    Edit
+    ```
     from pyspark.sql.functions import broadcast
     df_result = large_df.join(broadcast(small_df), "key_column", "inner")
+    ```
+
     ✅ Use Bucketing for large joins:
     
-    python
-    Copy
-    Edit
+    ```
     df.write.bucketBy(10, "key_column").saveAsTable("bucketed_table")
-    5. Resource & Configuration Tuning
+    ```
+    
+    5. Resource & Configuration Tuning:
+       
     ✅ Increase parallelism by tuning spark.sql.shuffle.partitions:
     
-    python
-    Copy
-    Edit
+    ```
     spark.conf.set("spark.sql.shuffle.partitions", "200")
+    ```
+    
     ✅ Optimize memory allocation:
     
-    python
-    Copy
-    Edit
+    ```
     spark.conf.set("spark.executor.memory", "4g")
     spark.conf.set("spark.driver.memory", "2g")
     spark.conf.set("spark.executor.cores", "2")
-    6. Efficient UDF Usage
+    ```
+    
+    6. Efficient UDF Usage:
+       
     ✅ Avoid Python UDFs, use Spark SQL functions or Pandas UDFs instead:
     
-    python
-    Copy
-    Edit
+    ```
     from pyspark.sql.functions import col
     df = df.withColumn("new_column", col("existing_column") * 2)  # Faster than UDF
+    ```
+
     ✅ Use Pandas UDFs for better performance on large datasets:
     
-    python
-    Copy
-    Edit
+    ```
     from pyspark.sql.functions import pandas_udf
     import pandas as pd
     
@@ -449,50 +452,54 @@ https://learn.microsoft.com/en-us/training/modules/describe-purview-data-governa
         return s * 2
     
     df = df.withColumn("new_column", multiply_by_two(df["existing_column"]))
-    7. Optimize File Formats
+    ```
+
+    7. Optimize File Formats:
+
     ✅ Prefer Parquet or ORC over CSV/JSON for better compression and query performance:
     
-    python
-    Copy
-    Edit
+    ```
     df.write.mode("overwrite").parquet("s3://your-bucket/optimized-data")
+    ```
+
     ✅ Use Snappy compression for Parquet files:
     
-    python
-    Copy
-    Edit
+    ```
     df.write.option("compression", "snappy").parquet("output_path")
-    8. Reduce Data Skew
+    ```
+
+    8. Reduce Data Skew:
+
     ✅ Handle skewed joins using SALTING:
     
-    python
-    Copy
-    Edit
+    ```
     from pyspark.sql.functions import expr
     
     df_skewed = df.withColumn("salt", expr("floor(rand() * 10)"))
     df_large = df_large.withColumn("salt", expr("floor(rand() * 10)"))
     
     df_result = df_skewed.join(df_large, ["key_column", "salt"], "inner")
+    ```
+    
     ✅ Use Skew Hinting:
     
-    python
-    Copy
-    Edit
+    ```
     df1.join(df2.hint("skew"), "key_column")
+    ```
+
     9. Avoid Collect() & Use Proper Aggregations
+
     ✅ Use .show() instead of .collect() to preview data:
     
-    python
-    Copy
-    Edit
+    ```
     df.show(5)
+    ```
+
     ✅ Use built-in aggregations instead of manual loops:
     
-    python
-    Copy
-    Edit
+    ```
     df.groupBy("category").agg({"price": "sum"}).show()
+    ```
 
 
 11. 
