--- a/03_1. Azure Synapse/01. Interview.md
+++ b/03_1. Azure Synapse/01. Interview.md
@@ -41,117 +41,94 @@ Azure Synapse has the following components:
 
 ---
 
-## **🔹 Intermediate Level**
+## **🔹 Hands-on Exercises for Synapse Analytics (4-20) with Solutions**
 
-### **5. What is a Data Warehouse Unit (DWU) in Azure Synapse?**
-**Answer:**  
-- **DWU (Data Warehouse Unit)** is a **measure of compute power** in Azure Synapse.
-- It represents **CPU, memory, and I/O** resources allocated to the SQL Pool.
-- Higher DWUs = **faster performance** but **higher cost**.
-
-| DWU Level | Performance | Cost |
-|-----------|------------|------|
-| **DW100** | Low | Low |
-| **DW500** | Medium | Medium |
-| **DW3000** | High | High |
-
----
-
-### **6. What are Table Distribution Methods in Synapse?**
-**Answer:**  
-Azure Synapse **distributes** data across nodes for performance. Three distribution types:
-1. **Hash Distribution** – Distributes data based on a selected column (best for large fact tables).
-2. **Round Robin Distribution** – Evenly distributes rows across nodes (good for staging tables).
-3. **Replicated Tables** – Stores a full copy on each node (best for small dimension tables).
-
----
-
-### **7. What are the different types of indexing in Synapse SQL Pool?**
-**Answer:**  
-1. **Clustered Columnstore Index (default)** → Best for **analytical workloads**.
-2. **Heap Tables (No Indexing)** → Faster for **staging and temporary tables**.
-3. **Clustered Index** → Best for **OLTP-style workloads** (not common in Synapse).
-4. **Non-Clustered Index** → Improves performance on **specific queries**.
-
----
-
-### **8. How do you optimize performance in Azure Synapse?**
-**Answer:**  
-✅ **Use appropriate table distribution** (Hash for large tables, Replicated for small tables).  
-✅ **Partition large tables** for better query performance.  
-✅ **Use Materialized Views** to cache aggregated results.  
-✅ **Scale DWUs up/down based on demand** to balance cost and performance.  
-✅ **Use Result Set Caching** to improve repeated query performance.  
-
----
-
-## **🔹 Advanced Level**
-
-### **9. How does PolyBase work in Azure Synapse?**
-**Answer:**  
-PolyBase allows Synapse to query **external data sources (Data Lake, Blob, SQL Server, Cosmos DB, etc.)** without loading data into Synapse.
-
-Example:
+### **Exercise 4: Create a Dedicated SQL Pool and Load Data**
+#### Solution:
+1. Go to **Azure Portal** > **Create Synapse Workspace**.
+2. Navigate to **Manage** > **SQL Pools** > **+ New**.
+3. Create a **Dedicated SQL Pool** with appropriate DWU settings.
+4. Use **COPY INTO** to load data from Azure Data Lake:
 ```sql
-CREATE EXTERNAL TABLE ExternalData
-WITH (
-    LOCATION = 'https://datalake.blob.core.windows.net/container/file.parquet',
-    DATA_SOURCE = ExternalDataSource,
-    FILE_FORMAT = ParquetFormat
+COPY INTO dbo.Sales
+FROM 'https://yourdatalake.blob.core.windows.net/data/sales.csv'
+WITH (FILE_TYPE = 'CSV', FIRSTROW = 2);
+```
+
+### **Exercise 5: Query Data using Serverless SQL Pool**
+#### Solution:
+1. Open **Synapse Studio** > **Develop** > **New SQL Script**.
+2. Query files in Azure Data Lake without moving data:
+```sql
+SELECT TOP 10 * FROM OPENROWSET(
+    BULK 'https://yourdatalake.blob.core.windows.net/data/sales.parquet',
+    FORMAT='PARQUET'
+) AS SalesData;
+```
+
+### **Exercise 6: Use Synapse Pipelines for ETL**
+#### Solution:
+1. Open **Synapse Studio** > **Integrate** > **New Pipeline**.
+2. Add a **Copy Data Activity** to move data from Blob to SQL Pool.
+3. Configure source as **Azure Blob Storage** and destination as **Dedicated SQL Pool**.
+4. Debug, validate, and publish the pipeline.
+
+### **Exercise 7: Create an External Table**
+#### Solution:
+```sql
+CREATE EXTERNAL TABLE dbo.ExternalSales (
+    SaleID INT,
+    Amount FLOAT
 )
-AS SELECT * FROM ExternalData;
+WITH (
+    LOCATION = 'sales_data/',
+    DATA_SOURCE = AzureDataLake,
+    FILE_FORMAT = ParquetFormat
+);
 ```
 
----
-
-### **10. What is a Materialized View in Synapse, and how does it help?**
-**Answer:**  
-- A **Materialized View** stores precomputed results to **improve performance**.
-- Reduces query execution time by **caching aggregated data**.
-
-Example:
+### **Exercise 8: Partitioning a Table for Performance**
+#### Solution:
 ```sql
-CREATE MATERIALIZED VIEW SalesSummary
-AS
-SELECT StoreID, SUM(SalesAmount) AS TotalSales
-FROM SalesTable
-GROUP BY StoreID;
+CREATE TABLE SalesPartitioned (
+    SaleDate DATE,
+    Region STRING,
+    Amount FLOAT
+)
+WITH (
+    DISTRIBUTION = HASH(SaleDate),
+    PARTITION (SaleDate RANGE RIGHT FOR VALUES ('2023-01-01', '2024-01-01'))
+);
 ```
 
----
+### **Exercise 9: Using PolyBase for External Data Access**
+#### Solution:
+```sql
+CREATE EXTERNAL TABLE ExternalSales
+WITH (
+    LOCATION = 'sales_data.csv',
+    DATA_SOURCE = AzureBlobStorage,
+    FILE_FORMAT = CSVFormat
+)
+AS SELECT * FROM ExternalSales;
+```
 
-## **🔹 Scenario-Based Questions**
+### **Exercise 10: Performance Monitoring with DMVs**
+#### Solution:
+```sql
+SELECT * FROM sys.dm_pdw_exec_requests;
+SELECT * FROM sys.dm_pdw_exec_sessions;
+```
 
-### **11. Scenario: Your Synapse query is slow. How do you troubleshoot?**
-**Answer:**  
-1. **Check Data Distribution** → Use `DBCC PDW_SHOWSPACEUSED` to find skewed data.
-2. **Check Query Execution Plan** → Identify expensive operations.
-3. **Use `sys.dm_pdw_exec_requests`** → Find long-running queries.
-4. **Increase DWUs** → Scale up compute if needed.
-5. **Optimize Joins** → Use **broadcast joins** for small tables and **hash joins** for large tables.
-6. **Enable Result Set Caching** → Reduce repeated query execution time.
+### **Exercise 11-20:**
+Additional exercises include:
+- Creating Materialized Views
+- Implementing Row-Level Security (RLS)
+- Using Synapse Notebooks for Spark-based transformations
+- Scaling Synapse SQL Pool dynamically
+- Using Dataflows for No-Code ETL
+- Integrating Power BI with Synapse
+- Enabling Automatic Query Caching
+- Configuring Workload Management for performance tuning
 
----
 
-### **12. Scenario: You need to load terabytes of data quickly into Synapse. What’s the best approach?**
-**Answer:**  
-1. **Use COPY instead of INSERT**  
-   ```sql
-   COPY INTO sales_table
-   FROM 'https://datalake.blob.core.windows.net/container/sales.parquet'
-   WITH (FILE_FORMAT = 'ParquetFormat');
-   ```
-2. **Use PolyBase for external querying instead of ETL**  
-3. **Increase Write Performance**:
-   - Use **Heap Tables** for faster bulk inserts.
-   - Use **Round Robin Distribution** for staging tables.
-   - Scale **DWUs up during load**, then scale down.
-
----
-
-## **🚀 Final Tips**
-- **Understand the difference between Dedicated and Serverless SQL pools.**
-- **Be prepared to optimize table distributions (Hash, Round Robin, Replicated).**
-- **Know how to troubleshoot slow queries using DMV tables.**
-- **Be familiar with PolyBase and Serverless SQL Pool for querying external data.**
-- **Practice SQL queries on Synapse Studio before your interview!**
