--- a/03_1. Azure Synapse/01. Interview.md
+++ b/03_1. Azure Synapse/01. Interview.md
@@ -41,6 +41,121 @@ Azure Synapse has the following components:
 
 ---
 
+## **🔹 Intermediate Level**
+
+### **5. What is a Data Warehouse Unit (DWU) in Azure Synapse?**
+**Answer:**  
+- **DWU (Data Warehouse Unit)** is a **measure of compute power** in Azure Synapse.
+- It represents **CPU, memory, and I/O** resources allocated to the SQL Pool.
+- Higher DWUs = **faster performance** but **higher cost**.
+
+| DWU Level | Performance | Cost |
+|-----------|------------|------|
+| **DW100** | Low | Low |
+| **DW500** | Medium | Medium |
+| **DW3000** | High | High |
+
+---
+
+### **6. What are Table Distribution Methods in Synapse?**
+**Answer:**  
+Azure Synapse **distributes** data across nodes for performance. Three distribution types:
+1. **Hash Distribution** – Distributes data based on a selected column (best for large fact tables).
+2. **Round Robin Distribution** – Evenly distributes rows across nodes (good for staging tables).
+3. **Replicated Tables** – Stores a full copy on each node (best for small dimension tables).
+
+---
+
+### **7. What are the different types of indexing in Synapse SQL Pool?**
+**Answer:**  
+1. **Clustered Columnstore Index (default)** → Best for **analytical workloads**.
+2. **Heap Tables (No Indexing)** → Faster for **staging and temporary tables**.
+3. **Clustered Index** → Best for **OLTP-style workloads** (not common in Synapse).
+4. **Non-Clustered Index** → Improves performance on **specific queries**.
+
+---
+
+### **8. How do you optimize performance in Azure Synapse?**
+**Answer:**  
+✅ **Use appropriate table distribution** (Hash for large tables, Replicated for small tables).  
+✅ **Partition large tables** for better query performance.  
+✅ **Use Materialized Views** to cache aggregated results.  
+✅ **Scale DWUs up/down based on demand** to balance cost and performance.  
+✅ **Use Result Set Caching** to improve repeated query performance.  
+
+---
+
+## **🔹 Advanced Level**
+
+### **9. How does PolyBase work in Azure Synapse?**
+**Answer:**  
+PolyBase allows Synapse to query **external data sources (Data Lake, Blob, SQL Server, Cosmos DB, etc.)** without loading data into Synapse.
+
+Example:
+```sql
+CREATE EXTERNAL TABLE ExternalData
+WITH (
+    LOCATION = 'https://datalake.blob.core.windows.net/container/file.parquet',
+    DATA_SOURCE = ExternalDataSource,
+    FILE_FORMAT = ParquetFormat
+)
+AS SELECT * FROM ExternalData;
+```
+
+---
+
+### **10. What is a Materialized View in Synapse, and how does it help?**
+**Answer:**  
+- A **Materialized View** stores precomputed results to **improve performance**.
+- Reduces query execution time by **caching aggregated data**.
+
+Example:
+```sql
+CREATE MATERIALIZED VIEW SalesSummary
+AS
+SELECT StoreID, SUM(SalesAmount) AS TotalSales
+FROM SalesTable
+GROUP BY StoreID;
+```
+
+---
+
+## **🔹 Scenario-Based Questions**
+
+### **11. Scenario: Your Synapse query is slow. How do you troubleshoot?**
+**Answer:**  
+1. **Check Data Distribution** → Use `DBCC PDW_SHOWSPACEUSED` to find skewed data.
+2. **Check Query Execution Plan** → Identify expensive operations.
+3. **Use `sys.dm_pdw_exec_requests`** → Find long-running queries.
+4. **Increase DWUs** → Scale up compute if needed.
+5. **Optimize Joins** → Use **broadcast joins** for small tables and **hash joins** for large tables.
+6. **Enable Result Set Caching** → Reduce repeated query execution time.
+
+---
+
+### **12. Scenario: You need to load terabytes of data quickly into Synapse. What’s the best approach?**
+**Answer:**  
+1. **Use COPY instead of INSERT**  
+   ```sql
+   COPY INTO sales_table
+   FROM 'https://datalake.blob.core.windows.net/container/sales.parquet'
+   WITH (FILE_FORMAT = 'ParquetFormat');
+   ```
+2. **Use PolyBase for external querying instead of ETL**  
+3. **Increase Write Performance**:
+   - Use **Heap Tables** for faster bulk inserts.
+   - Use **Round Robin Distribution** for staging tables.
+   - Scale **DWUs up during load**, then scale down.
+
+---
+
+## **🚀 Final Tips**
+- **Understand the difference between Dedicated and Serverless SQL pools.**
+- **Be prepared to optimize table distributions (Hash, Round Robin, Replicated).**
+- **Know how to troubleshoot slow queries using DMV tables.**
+- **Be familiar with PolyBase and Serverless SQL Pool for querying external data.**
+- **Practice SQL queries on Synapse Studio before your interview!**
+
 ## **🔹 Hands-on Exercises for Synapse Analytics (4-20) with Solutions**
 
 ### **Exercise 4: Create a Dedicated SQL Pool and Load Data**
